# hermes-agent-kit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: index.md  providers.md  quickstart.md  troubleshooting.md
docs/manual/: cost-tracker.md  fallback.md  rate-limiter.md  router.md
src/hermes_kit/: __init__.py  bridge.py  cli.py
src/hermes_kit/hooks/cost_tracker/: HOOK.yaml  cost_tracker.yaml  handler.py
src/hermes_kit/hooks/fallback/: HOOK.yaml  fallback_chain.yaml  handler.py
src/hermes_kit/hooks/model_switch/: HOOK.yaml  handler.py
src/hermes_kit/hooks/rate_limiter/: HOOK.yaml  handler.py  rate_limits.yaml
src/hermes_kit/hooks/router/: HOOK.yaml  handler.py  topic_router.yaml
src/hermes_kit/lib/: hermes_api.py
tests/: conftest.py  test_bridge.py  test_cli.py  test_cost_tracker.py  test_e2e_bridge.py  test_e2e_gateway.py  test_e2e_hooks.py  test_e2e_model_switch.py  test_fallback.py  test_integration.py  test_model_switch.py  test_rate_limiter.py  test_router.py
