[project]
name = "hermes-kit"
version = "0.2.1"
description = "Production hardening pack for Hermes Agent — per-topic model routing, fallback chains, rate limiting, and cost tracking via gateway hooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
hermes-kit = "hermes_kit.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["src"]
